--- a/styles/global.css
+++ b/styles/global.css
@@ -21,7 +21,11 @@
   --text-color-secondary: #a1a1aa;
   --brand-color-primary: #f7b733;
   --brand-color-secondary: #fc4a1a;
-  --brand-gradient: linear-gradient(90deg, #fc4a1a, #f7b733);
+  --brand-gradient: linear-gradient(
+    90deg,
+    var(--brand-color-secondary) 0%,
+    var(--brand-color-primary) 100%
+  );
 
   --ff-sans: 'Inter', system-ui, sans-serif;
   --fw-base: 400;
