--- a/styles/buttons.css
+++ b/styles/buttons.css
@@ -23,6 +23,11 @@
 .btn:hover {
   --btn-bg-color: var(--brand-gradient);
   --btn-color: var(--surface-color);
+
+  -webkit-background-clip: initial;
+  background-clip: initial;
+
+  color: var(--btn-color);
 }
 
 .btn-sm {
@@ -60,5 +65,17 @@
 
     position: relative;
     z-index: 1;
+  }
+}
+
+@media (width >= 80em) {
+  .btn-sm {
+    padding: 0.75rem 1.5rem;
+    font-size: var(--fs-base);
+  }
+
+  .btn-md {
+    padding: 1rem 2rem;
+    font-size: 1.125rem;
   }
 }
